--- a/news.html
+++ b/news.html
@@ -31,6 +31,9 @@
         <ul>
 
             <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
                 <a href="news.html">Novedades</a>
             </li>
 
