experimentando css, tener cuidado con medidas, todavia no se ajusta el formato a diferentes tamaños

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
         </section>
 
         <div id="aside">
-         <aside>Banner</aside>
+         <aside>
+             
+           <p class="costado">Banner</p> 
+        
+        </aside>
         </div>
 
     </main>
