--- a/index.html
+++ b/index.html
@@ -14,16 +14,36 @@
 
 <body>
 
-	<header class="HeadIndex">
+	<header class="logoindex"> <!-- voy a trabajar las propiedades de header para news, gallery y about us tambien pero quiero que cada uno tenga diferente color, por eso cada uno tendra una clase diferente -->
 
-		
+		<div class="superior">
 
+			<h1>
+				<a href="index.html">
 
+					utn
 
+				</a>
+
+			</h1>
+
+		</div>
 
 	</header>
     
+	<nav>
+
+
+
+		
+	</nav>
+
 	<main>
+
+
+
+
+
 
 	</main>
 
