--- a/gallery.html
+++ b/gallery.html
@@ -14,43 +14,56 @@
 
 <body>
 
-    <div id="header">
+    <header class="logogallery"> <!-- voy a trabajar las propiedades de header para news, gallery y about us tambien pero quiero que cada uno tenga diferente color, por eso cada uno tendra una clase diferente -->
 
-        <header class="logo">
+		<div class="superior">
 
-            <h1>
-                <a href="index.html">UTN</a>
-            </h1>
+			<h1>
+				<a href="index.html">
 
-        </header>
+					utn
 
-    </div>
+				</a>
 
-    <div id="nav">
+			</h1>
 
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="news.html">Novedades</a>
-            </li>
+		</div>
 
-            <li>
-                <a href="gallery.html">Galeria</a>
-            </li>
-
-            <li>
-                <a href="about us.html">Nosotros</a>
-            </li>
-        
-        </ul>
-
-    </div>
-
+	</header>
     
+	<nav class="navbarG">
+
+		<ul>
+
+			<li>
+				<a href="index.html">Home</a>
+			</li>
+
+			<li>
+				<a href="news.html">Novedades</a>
+			</li>
+
+			<li>
+				<a href="about us.html">Nosotros</a>
+			</li>
+		
+		</ul>
+		
+	</nav>
 
 
+
+    <footer id="verde">
+
+		<p>
+			© 2021 - Derechos reservados
+		</p>
+
+		<p>
+			Desarrollado por: <a href="https://www.instagram.com/leaarbelo">Leandro Arbelo</a>
+		</p>
+
+	</footer>
 
 </body>
 
