--- a/news.html
+++ b/news.html
@@ -14,43 +14,56 @@
 
 <body>
 
-    <div id="header">
+    <header class="logonews"> 
 
-        <header class="logo">
+		<div class="superior">
 
-            <h1>
-                <a href="index.html">UTN</a>
-            </h1>
+			<h1>
+				<a href="index.html">
 
-        </header>
+					utn
 
-    </div>
+				</a>
 
-    <div id="nav">
+			</h1>
 
-        <ul>
+		</div>
 
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="news.html">Novedades</a>
-            </li>
+	</header>
+    
+	<nav class="navbarN">
 
-            <li>
-                <a href="gallery.html">Galeria</a>
-            </li>
+		<ul>
 
-            <li>
-                <a href="about us.html">Nosotros</a>
-            </li>
-        
-        </ul>
+			<li>
+				<a href="index.html">Home</a>
+			</li>
 
-    </div>
+			<li>
+				<a href="gallery.html">Galeria</a>
+			</li>
+
+			<li>
+				<a href="about us.html">Nosotros</a>
+			</li>
+		
+		</ul>
+		
+	</nav>
 
 
 
+    <footer id="naranja">
+
+		<p>
+			© 2021 - Derechos reservados
+		</p>
+
+		<p>
+			Desarrollado por: <a href="https://www.instagram.com/leaarbelo">Leandro Arbelo</a>
+		</p>
+
+	</footer>
 
 
 
