finalizada pagina index (falta bootstrap)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 		<aside>
 
 			<span>
-				<img src="imagenes/banner.jpg" alt="banner" width="100%">Despues veo como solucionar esto
+				<img id="logovertical" src="imagenes/logo-utn3.png" alt="logo" width="250%" >
+				<img id= "logohorizontal" src="imagenes/banner.jpg" alt="banner" width="100%">
 			</span>
 
 		</aside>
