pagina de noticias terminada

--- a/news.html
+++ b/news.html
@@ -12,7 +12,8 @@
 
 </head>
 
-<body>
+<body class="fondoN">
+	<a id="inicio"></a>
 
     <header class="logonews"> 
 
@@ -51,6 +52,70 @@
 		
 	</nav>
 
+	<main class="principalN">
+		<section class="newsfull">
+
+			<div class="maintitle">
+			<h1>NOTICIAS</h1>
+			</div>
+
+			<article class="nota1">
+				<a id="noticia1"></a>
+			<h2>Titulo 1</h2>
+			<img class="izq" src="imagenes/james-harden-houston-rockets.webp" alt="noti1" width="50%">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi reprehenderit quaerat voluptatum ipsa eius odit debitis est ipsum architecto voluptate maiores, error minus magni sunt velit? Fugit cum cupiditate voluptatibus.
+			</p>
+			<h4>sub-titulo 1</h4>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aspernatur, ullam qui praesentium et nisi pariatur quis, sint aliquid quidem odit natus, sunt fugit optio beatae commodi impedit labore asperiores?</p>
+		</article>
+
+		<article class="nota1">
+			<a id="noticia2"></a>
+			<h3>Titulo 2</h3>
+			<img src="imagenes/img1.jpg" alt="noti2" width="50%">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel ipsa nulla aspernatur reprehenderit aperiam similique sunt praesentium beatae commodi. Dolore incidunt temporibus repellendus? Numquam debitis consectetur deleniti eum nihil?
+			</p>
+			<h4>sub-titulo 2</h4>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt pariatur, saepe eaque accusantium corporis, possimus ullam sint assumenda ipsam numquam nobis voluptate magni totam. Velit cupiditate quas officia in quia?</p>
+		</article>
+
+
+		<article class="nota1">
+			<a id="noticia3"></a>
+			<h3>Titulo 3</h3>
+			<img src="imagenes/img2.png" alt="noti3" width="50%">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae deleniti ipsam architecto excepturi commodi ratione. Harum, repudiandae sequi! Nisi similique repellendus sunt beatae sapiente! Fugit amet aliquid pariatur porro dignissimos?</p>
+			<h4>sub-titulo 3</h4>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam quos animi, quod aliquid vero expedita eveniet, voluptatibus delectus tempora eum, non dolores sapiente! Molestiae sequi in praesentium. Aliquid, molestiae deserunt.</p>
+		</article>
+
+			<article class="nota1">
+				<a id="noticia4"></a>
+			<h3>Titulo 4</h3>
+			<img src="imagenes/img3.jpg" alt="noti4" width="50%">
+			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, aspernatur omnis corporis obcaecati voluptate nobis cum repudiandae nemo ad maiores provident saepe, sequi natus et earum amet officiis, alias deserunt?</p>
+			<h4>sub-titulo 4</h4>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nostrum libero neque aut suscipit qui delectus perspiciatis! Laborum recusandae error aliquam, minima sed molestiae atque eum maiores explicabo labore et!</p>
+		</article>
+
+			<article class="nota1">
+				<a id="noticia5"></a>
+			<h3>Titulo 5</h3>
+			<img src="imagenes/good-doctor-richard-schiff-coronavirus.webp" alt="noti5" width="50%">
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis consectetur quibusdam accusantium. Reprehenderit velit, reiciendis sapiente commodi quibusdam quo quidem accusamus minus veritatis nostrum incidunt mollitia vel exercitationem, vitae ex!</p>
+			<h4>sub-titulo 5</h4>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, fuga impedit? Eaque labore quas tempora, soluta minus quam iure perspiciatis nostrum sequi voluptatibus odio nisi voluptatum voluptate et. Suscipit, mollitia?</p>
+		</article>
+
+		</section>
+		<aside class="bannN">
+			<span>
+				<img src="imagenes/banner.jpg" alt="banner" width="98%">
+			</span>
+		</aside>
+
+		<a href="#inicio"><button>Inicio</button></a>
+	</main>
 
 
     <footer id="naranja">
